<resources>
    <string name="noti_msg_calls" translatable="false">Reach out to these customers before they go somewhere else!</string>
    <string name="noti_msg_enquires" translatable="false">Respond to these enquiries before it\'s too late!</string>
    <string name="noti_msg_orders" translatable="false">New order details, click to take action!</string>
    <string name="gmb_integration_Successful" translatable="false">Your business has been synced with Google My Business</string>
    <string name="gmb_upload_data" translatable="false">Google My Business Profile updated.</string>
    <string name="twitter_consumer_key" translatable="false">4CiUg5gcIbvYre8XjGd8GsElV</string>
    <string name="twitter_consumer_secret" translatable="false">4kNsAsyM2w4F3fAEqyIK4xTcIUgoq2CtRpkH5Z7U4WW5T2ucC9</string>
    <string name="google_map_key" translatable="false">AIzaSyBl66AnJ4_icH3gxI_ATc8031pveSTGWcg</string>
    <string name="app_name">Thinksity</string>
    <string name="action_settings">Settings</string>
    <string name="syncing_with_gmb" translatable="false">Syncing with Google My Business</string>
    <string name="next" translatable="false">Next</string>
    <string name="retry_add_gmb" translatable="false">Retry time exceeded</string>
    <string name="choose_salesman" translatable="false">Choose Salesman</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_web_site_address">Website Address</string>
    <string name="title_activity_login" translatable="false">Welcome Back</string>
    <string name="title_activity_business_profile">BusinessProfileActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="hotline_file_provider_authority" translatable="false">com.biz2.nowfloats.provider</string>
    <string name="title_activity_business_profile__home" translatable="false">Business Profile</string>
    <string name="business__address">Business Address</string>
    <string name="contact__info">Contact Information</string>
    <string name="title_activity_business__hours_">Business Hours</string>
    <string name="title_activity_business__logo_">Business Logo</string>
    <string name="title_activity_social__sharing_">Social Sharing</string>
    <string name="third_party_integration" translatable="false">Third Party Integrations</string>
    <string name="title_activity_login__main">Welcome Back</string>
    <string name="title_activity_pre_sign_up__main">PreSignUp_MainActivity</string>
    <string name="ps_create_lbl" translatable="false">CREATE</string>
    <string name="ps_login_lbl" translatable="false">LOG IN</string>
    <string name="manage_inventory" translatable="false">Orders</string>
    <string name="manage_inbox" translatable="false">Enquiries</string>
    <string name="manage_customer_calls" translatable="false">Calls</string>
    <string name="ps_create_lbl_tag" translatable="false">a website with NowFloats</string>
    <string name="ps_login_lbl_tag" translatable="false">to manage NowFloats website</string>
    <string name="ps_sc2_lbl1">Instant Website</string>
    <string name="gmb_error_message" translatable="false">Sorry you don\'t have a Google My Business Account</string>
    <string name="ps_sc2_lbl2">Creation</string>
    <string name="ps_sc2_lbl3" translatable="false">Get a business website \nthat is instantly created and \neasily managed using this app.</string>
    <string name="ps_sc3_lbl1">Connect to</string>
    <string name="ps_sc3_lbl2">Facebook</string>
    <string name="ps_sc3_lbl3">Sign in with your Facebook page to \ncreate and update your website instantly. \nHighly recommended!</string>
    <string name="ps_sc4_lbl1">Discoverable</string>
    <string name="ps_sc4_lbl2">On Search</string>
    <string name="ps_sc4_lbl3">With Location-Based-SEO<sup><small>TM</small></sup>, get \ndiscovered for relevant keywords and \nimprove your ranking on search engines</string>
    <string name="ps_sc5_lbl1">Get your own</string>
    <string name="ps_sc5_lbl2">Domain</string>
    <string name="ps_sc5_lbl3">Take the next step in growing your personal online identity.</string>
    <string name="ps_sc6_lbl1">Generate Employment</string>
    <string name="ps_sc6_lbl2">Opportunities</string>
    <string name="ps_sc8_lbl1">Premium features in</string>
    <string name="ps_sc8_lbl2">NowFloats</string>
    <string name="ps_sc8_lbl3">Get additional features \nfor your business website \nfrom the in-app Store.</string>
    <string name="ps_sc8_lbl4">Store</string>
    <string name="feedback">Need Help? Get in touch with us</string>
    <string name="cancel_in_capital">@android:string/cancel</string>
    <string name="post_update">Post An Update</string>
    <string name="update">Update</string>
    <string name="renew_light_house_plan">Renew Boost plan to get all the features</string>
    <string name="login">Login</string>
    <string name="tweet">Tweet</string>
    <string name="logout">Logout</string>
    <string name="thats_ok_it_happens_tell_us_why">That\'s OK. It happens. But could you tell us why?</string>
    <string name="prefered_old_theme">I prefer the old theme.</string>
    <string name="my_customer_prefer_old_theme">My customers prefer the old theme.</string>
    <string name="some_widget_i_donot_know_in_old_theme">I can\'t see some of the widgets that were there on the old theme.</string>
    <string name="its_not_what_i_paid_for">It\'s not what I paid for.</string>
    <string name="other_reasons">Other reasons (please type)&#8230;</string>
    <string name="enter_the_reason">Enter other reason</string>
    <string name="submit">SUBMIT</string>
    <string name="filter_by" translatable="false">Filter by</string>
    <string name="action_sort_date" translatable="false">Recent</string>
    <string name="action_sort_expiry" translatable="false">Expiring</string>
    <string name="action_sort_source" translatable="false">Channel</string>
    <string name="name" translatable="false">Name</string>
    <string name="designation" translatable="false">Designation</string>
    <string name="save" translatable="false">save</string>
    <string name="company_title" translatable="false">Company Title</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_image">Add image</string>
    <string name="facebook_profile">Facebook Profile</string>
    <string name="enter_facebook_url">Enter Facebook URL</string>
    <string name="twitter_profile">Twitter Profile</string>
    <string name="enter_twitter_url">Enter Twitter URL</string>
    <string name="skype_profile">Skype Profile</string>
    <string name="enter_skype_url">Enter Skype URL</string>
    <string name="shipping_metric">Shipping Metric</string>
    <string name="length_in_cm">Length (In cm)</string>
    <string name="width_in_cm">Width (In cm)</string>
    <string name="height_in_cm">Height (In cm)</string>
    <string name="weight_in_kgs">Weight (In Kgs)</string>
    <string name="shipping_charges">Shipping Charges:</string>
    <string name="inr_0">INR 0</string>
    <string name="calculate_shipping_charges">Calculate Shipping Charges</string>
    <string name="save_metrics">Save Metrics</string>
</resources>