<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FBFBFB"
  android:clickable="true"
  android:focusable="true"
  android:orientation="vertical">

  <include
    android:id="@+id/app_bar"
    layout="@layout/new_custome_app_bar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/add_image" />

      <androidx.cardview.widget.CardView
        android:id="@+id/card_primary_image"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        android:padding="2dp"
        app:cardCornerRadius="4dp">

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/ic_image_placeholder">

          <ImageView
            android:id="@+id/iv_primary_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

          <ImageButton
            android:id="@+id/ib_remove_product_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/margin_5"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_remove" />

        </FrameLayout>

      </androidx.cardview.widget.CardView>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/name" />

      <EditText
        android:id="@+id/name_value"
        style="@style/EditTextCustomeStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_2sdp"
        android:hint="@string/enter_name" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/designation" />

      <EditText
        android:id="@+id/designation_value"
        style="@style/EditTextCustomeStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_2sdp"
        android:hint="@string/company_title" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/facebook_profile" />


      <EditText
        android:id="@+id/facebook_url_value"
        style="@style/EditTextCustomeStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:elevation="@dimen/_2sdp"
        android:gravity="top"
        android:hint="@string/enter_facebook_url" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/twitter_profile" />


      <EditText
        android:id="@+id/twitter_url_value"
        style="@style/EditTextCustomeStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:elevation="@dimen/_2sdp"
        android:gravity="top"
        android:hint="@string/enter_twitter_url" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/skype_profile" />


      <EditText
        android:id="@+id/skype_url_value"
        style="@style/EditTextCustomeStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:elevation="@dimen/_2sdp"
        android:gravity="top"
        android:hint="@string/enter_skype_url" />


      <TextView
        android:id="@+id/save_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/orange_button_click_effect"
        android:elevation="@dimen/_2sdp"
        android:fontFamily="@font/semi_bold"
        android:gravity="center"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    </LinearLayout>
  </ScrollView>

</LinearLayout>