<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/white_label_style"
  android:layout_width="match_parent"
  android:layout_height="match_parent"

  >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"

    android:orientation="vertical"
    android:paddingBottom="@dimen/pre_s2_linear1_paddingBottom"

    >

    <com.nowfloats.CustomWidget.Label
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"

      android:text="@string/ps_sc8_lbl1"
      android:textColor="@color/home_yellow"
      android:textSize="28sp" />

    <com.nowfloats.CustomWidget.Label
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/ps_sc8_lbl2"
      android:textColor="@color/home_yellow"
      android:textSize="@dimen/ps_lbl2_size"
      android:visibility="gone" />

    <com.nowfloats.CustomWidget.Label
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="5dp"
      android:text="@string/ps_sc8_lbl4"
      android:textColor="@color/home_yellow"
      android:textSize="35sp"
      android:visibility="visible" />

    <com.nowfloats.CustomWidget.ResizableImageView
      android:layout_width="@dimen/pre_s2_mainImage_width"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:src="@drawable/ps_screen7" />

    <com.nowfloats.CustomWidget.Label
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/pre_s2_description_marginTop"
      android:gravity="center_horizontal"
      android:paddingStart="@dimen/pre_s2_description_paddingLeft"
      android:paddingRight="@dimen/pre_s2_description_paddingRight"
      android:text="@string/ps_sc8_lbl3"
      android:textColor="@color/black"
      android:textSize="@dimen/ps_lbl3_size" />

  </LinearLayout>

</RelativeLayout>